@@ -5,6 +5,7 @@ EFA Version 3.0.2.2 TEST PLAN
 Confirm successful MailWatch update
   Check timeout function
   Check directory traversal to reports in MailScanner Config View
+  Check utf8mb4 glyphs are rendering in MailWatch
 Confirm mod_security exceptions are active
 
 * very complex passwords or passwords that resemble attack
