@@ -2,6 +2,7 @@
 EFA Version 3.0.2.2 Changes
 ############################################################
 
+Issue #357 Bug               - Fonts Not Rendering in MailWatch
 Issue #358 Bug               - Certain emails from detail.php do not populate B/W Lists
 Issue #362 Bug               - mod_security disable id 981247
 Issue #363 Bug               - Check for failed yum kernel update
